[gd_scene load_steps=2 format=3 uid="uid://8rq76p05fovl"]

[ext_resource type="Script" path="res://ChatRoom/Chatroom.gd" id="1"]

[node name="Chatroom" type="CanvasLayer"]
script = ExtResource("1")

[node name="vbxChatRoomContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="vbxChatRoomContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="txtChatHistory" type="RichTextLabel" parent="vbxChatRoomContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true

[node name="itlUsers" type="ItemList" parent="vbxChatRoomContainer/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="vbxChatRoomContainer"]
layout_mode = 2

[node name="txtMessage" type="TextEdit" parent="vbxChatRoomContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="btnLogout" type="Button" parent="vbxChatRoomContainer/HBoxContainer2"]
layout_mode = 2
text = "Logout"

[connection signal="pressed" from="vbxChatRoomContainer/HBoxContainer2/btnLogout" to="." method="_on_btnLogout_pressed"]
